fix navbar behind issue

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,13 +3,18 @@ html {
 }
 
 .navbar {
-    background: #fff;
+    background: rgba(255, 255, 255, 0.537);
+    z-index: 1;
     display: flex;
     justify-content: right;
+    position:fixed; 
+    width:100%;	
+    top:0;	
+    left:0;
   }
   
   .navbar-container {
-    height: 6.5rem;
+    height: 4rem;
     width: max-content;
   }
   
@@ -30,6 +35,10 @@ html {
     text-decoration: none;
     padding:0 1rem;
     height: 280%;
+
+    font-family:'Times New Roman', Times, serif;
+    font-weight: 200;
+    letter-spacing: 1px;
   }
   
   .nav-link:hover {
