--- a/src/components/pages/About.css
+++ b/src/components/pages/About.css
@@ -1,6 +1,6 @@
-body{
-  background-color: rgb(255, 255, 255);
-}
+/* body{
+  background-color: rgba(255, 255, 255, 0);
+} */
 
 h1 {
   text-align: center;
@@ -125,7 +125,6 @@ h1 {
 
   .main-skill-set {
     flex-wrap: wrap;
-    background-color: rgb(255, 255, 255);
     padding: 4rem;
     position: relative;
     padding-top: 8rem;
